<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/app_bar_change_location"
        android:icon="@drawable/ic_menu_location"
        android:title="@string/change_location"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/app_bar_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/app_bar_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/app_bar_about"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>
